feat: Sign in and Sign up with username and password
