# swagger.yml
@@ -20,9 +20,102 @@ securityDefinitions:
     type: apiKey
     in: header
 
+tags:
+  - name: Authentication
+  - name: Profile
+  - name: Users
+
 paths:
+  /signup:
+    post:
+      operationId: signUp
+      tags:
+        - Authentication
+      description: Sign up with username and password
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/SignUpRequest"
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/AuthResponse"
+        400:
+          $ref: "#/responses/400"
+        500:
+          $ref: "#/responses/500"
+
+  /signin_facebook:
+    post:
+      operationId: signInFacebook
+      tags:
+        - Authentication
+      description: Sign in with Facebook
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/SignInFacebookRequest"
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/AuthResponse"
+        400:
+          $ref: "#/responses/400"
+        500:
+          $ref: "#/responses/500"
+
+  /signin_apple:
+    post:
+      operationId: signInApple
+      tags:
+        - Authentication
+      description: Sign in with Apple
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/SignInAppleRequest"
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/AuthResponse"
+        400:
+          $ref: "#/responses/400"
+        500:
+          $ref: "#/responses/500"
+
+  /signin:
+    post:
+      operationId: signIn
+      tags:
+        - Authentication
+      description: Sign in with username and password
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/SignInRequest"
+
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/AuthResponse"
+        400:
+          $ref: "#/responses/400"
+        500:
+          $ref: "#/responses/500"
+
   /profile:
     get:
+      operationId: getProfile
+      tags:
+        - Profile
       security:
         - Authorization: []
       description: Return profile of the current user
@@ -38,6 +131,9 @@ paths:
 
   /users:
     get:
+      operationId: listUsers
+      tags:
+        - Users
       security:
         - Authorization: []
       description: Return a list of users
@@ -50,6 +146,55 @@ paths:
           $ref: "#/responses/501"
 
 definitions:
+  SignInRequest:
+    type: object
+    properties:
+      username:
+        type: string
+      password:
+        type: string
+    required:
+      - username
+      - password
+
+  SignUpRequest:
+    type: object
+    properties:
+      username:
+        type: string
+      password:
+        type: string
+      password_confirmation:
+        type: string
+    required:
+      - username
+      - password
+      - password_confirmation
+
+  SignInFacebookRequest:
+    type: object
+    properties:
+      token:
+        type: string
+    required:
+      - token
+
+  SignInAppleRequest:
+    type: object
+    properties:
+      token:
+        type: string
+    required:
+      - token
+
+  AuthResponse:
+    type: object
+    properties:
+      access_token:
+        type: string
+      username:
+        type: string
+
   Profile:
     type: object
     properties:
@@ -60,11 +205,13 @@ definitions:
   User:
     type: object
     properties:
+      id:
+        type: integer
       username:
         type: string
       email:
         type: string
-      extI_id:
+      ext_id:
         type: string
 
 responses:
@@ -75,6 +222,23 @@ responses:
       properties:
         message:
           type: string
+
+  401:
+    description: Unauthorized
+    schema:
+      type: object
+      properties:
+        message:
+          type: string
+
+  500:
+    description: Internal server error
+    schema:
+      type: object
+      properties:
+        message:
+          type: string
+
   501:
     description: Not implemented
     schema:
